# sirius-solver

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  SiriusAPI.md
src/: .gitignore  CMakeLists.txt  aa_compilation_des_sources  aa_compilation_includes  aa_edition_de_liens  cmake_install.cmake  mk
src/ALLOCATEUR/: mem_alloc_super_tableau.c  mem_allocateur.h  mem_fonctions.h  mem_free.c  mem_init_quit.c  mem_malloc.c  mem_realloc.c  mem_sys.h
src/BRANCH_AND_BOUND/: bb_affichages_traces.c  bb_alloc_desalloc_probleme.c  bb_balayage_en_largeur.c  bb_balayage_en_profondeur.c  bb_best_first.c  bb_branch_and_bound.c  bb_branch_and_bound_calculs.c  bb_callback.c  bb_choix_des_variables_a_instancier.c  bb_controler_les_coupes_non_prises_en_compte.c  bb_creation_noeud.c  bb_creer_les_noeuds_fils.c  bb_define.h  bb_eliminer_les_noeuds_sous_optimaux.c  bb_evaluer_en_profondeur_critiques.c  bb_evaluer_fils_du_meilleur_minorant.c  bb_exploration_rapide_en_profondeur.c  bb_fonctions.h  bb_inserer_les_coupes.c  bb_memoire.h  bb_nettoyer_arbre.c  bb_nettoyer_les_coupes.c  bb_rechercher_le_meilleur_minorant.c  bb_rechercher_le_noeud_avec_meilleur_ratio_fractionnaire.c  bb_rechercher_le_noeud_le_moins_fractionnaire.c  bb_resoudre_le_probleme_relaxe.c  bb_stocker_les_coupes_du_noeud.c  bb_supprimer_les_descendants_dun_noeud.c  bb_sys.h
src/CALLBACK/: sirius_callback.c  sirius_callback.h
src/LIBRAIRIE_PNE/: CMakeLists.txt  librairie_pne.c  librairie_pne.h  shared_exports.h
src/LIB_BIBSOLVEUR/: CMakeLists.txt
src/LIB_RTE_SOLVER_INTERFACE/: CMakeLists.txt  rte_solver_interface.cc  rte_solver_interface.h
src/LU/: lu_allouer_lu.c  lu_calculs_markowitz.c  lu_classement_lignes_colonnes.c  lu_constantes_externes.h  lu_constantes_internes.h  lu_construire_probleme.c  lu_define.h  lu_definition_arguments.h  lu_elimination_une_ligne.c  lu_elimination_une_ligne_cas_symetrique.c  lu_elimination_une_ligne_matrice_pleine.c  lu_elimination_une_ligne_turbo.c  lu_factorisation.c  lu_factorisation_calculs.c  lu_fonctions.h  lu_inconnues_indeterminees.c  lu_init_tableaux_null.c  lu_memoire.h  lu_refactorisation.c  lu_refactorisation_de_la_matrice.c  lu_reorganisation_chainages.c  lu_resolution.c  lu_resolution_hyper_creux.c  lu_scaling.c  lu_scan_ligne.c  lu_scan_ligne_cas_symetrique.c  lu_scan_ligne_matrice_pleine.c  lu_scan_super_ligne.c  lu_scan_super_ligne_cas_symetrique.c  lu_selection_pivot.c  lu_selection_pivot_diagonal.c  lu_selection_pivot_matrice_pleine.c  lu_super_lignes_calculs_hashcode.c  lu_super_lignes_creations_et_fusions.c  lu_super_lignes_declenchement.c  lu_super_lignes_detection.c  lu_super_lignes_merge_toutes_super_lignes.c  lu_super_lignes_modifications.c  lu_super_lignes_reallocs.c  lu_switch_markowitz.c  (+4 more)
src/PNE/: bb_affichages_traces.c  bb_alloc_desalloc_probleme.c  bb_balayage_en_largeur.c  bb_balayage_en_profondeur.c  bb_best_first.c  bb_branch_and_bound.c  bb_branch_and_bound_calculs.c  bb_choix_des_variables_a_instancier.c  bb_controler_les_coupes_non_prises_en_compte.c  bb_creation_noeud.c  bb_creer_les_noeuds_fils.c  bb_define.h  bb_eliminer_les_noeuds_sous_optimaux.c  bb_evaluer_en_profondeur_critiques.c  bb_evaluer_fils_du_meilleur_minorant.c  bb_exploration_rapide_en_profondeur.c  bb_fonctions.h  bb_inserer_les_coupes.c  bb_memoire.h  bb_nettoyer_arbre.c  bb_nettoyer_les_coupes.c  bb_rechercher_le_meilleur_minorant.c  bb_rechercher_le_noeud_avec_meilleur_ratio_fractionnaire.c  bb_rechercher_le_noeud_le_moins_fractionnaire.c  bb_resoudre_le_probleme_relaxe.c  bb_stocker_les_coupes_du_noeud.c  bb_supprimer_les_descendants_dun_noeud.c  bb_sys.h  mem_alloc_super_tableau.c  mem_allocateur.h  mem_fonctions.h  mem_free.c  mem_init_quit.c  mem_malloc.c  mem_realloc.c  mem_sys.h  mps_define.h  mps_extern_global.h  mps_global.h  params_io.c  (+320 more)
src/POINT_INTERIEUR/: pi_alloc_matrice.c  pi_alloc_probleme.c  pi_armijo.c  pi_calculs_utilitaires.c  pi_calstaf.c  pi_constantes_externes.h  pi_cremat.c  pi_cremat_systeme_augmente.c  pi_define.h  pi_definition_arguments.h  pi_fonctions.h  pi_gradient_conjugue.c  pi_incrementation.c  pi_init_transposee.c  pi_initxs.c  pi_md_equa.c  pi_memoire.h  pi_qinit.c  pi_quamin.c  pi_quamin_calculs.c  pi_reconstruire_matrice_a_resoudre.c  pi_resolution.c  pi_resolution_systeme_augmente.c  pi_restitution_des_resultats.c  pi_scaling.c  pi_sos1s2.c  pi_split_colonnes.c  pi_split_contraintes.c  pi_sys.h
src/PRESOLVE/: prs_DM.c  prs_DM_A.c  prs_DM_factoriser_matrice.c  prs_DM_resoudre_dual.c  prs_DM_resoudre_primal.c  prs_DM_resoudre_systeme_transpose.c  prs_alloc_reductions.c  prs_allocations.c  prs_ameliorer_bornes.c  prs_ameliorer_coefficients.c  prs_ameliorer_contraintes_de_bornes_variables.c  prs_calcul_borne_sur_variable_avec_une_contrainte.c  prs_calcul_borne_sur_variable_duale_avec_une_variable.c  prs_calculer_bornes_contraintes.c  prs_colonnes_colineaires.c  prs_combinaisons_de_contraintes.c  prs_contraintes_colineaires.c  prs_contraintes_inactives.c  prs_contruire_graphe_DIMACS.c  prs_define.h  prs_desactiver_contrainte.c  prs_determiner_le_type_de_borne_pour_dual.c  prs_enlever_contraintes_inactives.c  prs_fixer_une_variable_a_une_valeur.c  prs_fixer_variables_sur_critere.c  prs_fonctions.h  prs_maj_variable_duale.c  prs_memoire.h  prs_mettre_a_jour_bornes_des_variables.c  prs_mettre_a_jour_bornes_des_variables_duales.c  prs_presolve.c  prs_singleton_colonne.c  prs_singleton_ligne.c  prs_substituer_variables.c  prs_substituer_variables_non_bornees.c  prs_supprimer_contraintes_sans_variables.c  prs_sys.h  prs_variable_probing.c  prs_variables_duales_ameliorer_bornes.c  prs_variables_duales_et_couts_reduits.c  (+3 more)
src/SIMPLEXE/: spx_ajouter_coupes.c  spx_allouer_probleme.c  spx_appliquer_eta_vecteurs.c  spx_appliquer_eta_vecteurs_transposee.c  spx_bruitage_initial_des_couts.c  spx_calcul_MIR_pour_gomory_et_intersection.c  spx_calcul_borne_auxiliaire.c  spx_calcul_coupes_dintersection.c  spx_calcul_couts_reduits.c  spx_calcul_couts_reduits_avec_base_complete.c  spx_calcul_couts_reduits_avec_base_reduite.c  spx_calcul_du_cout.c  spx_calculer_b_barre.c  (+100 more)
(+56 files in other folders)
