CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
PROJECT(sirius_solver)

if(MSVC)
	add_compile_definitions("_CRT_SECURE_NO_WARNINGS")
	SET(BUILD_SHARED_LIBS OFF)
	SET(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
	SET(CMAKE_VS_INCLUDE_INSTALL_TO_DEFAULT_BUILD 1)
endif(MSVC)

MESSAGE("CMAKE_BINARY_DIR : ${CMAKE_BINARY_DIR}")
MESSAGE("CMAKE_SOURCE_DIR : ${CMAKE_SOURCE_DIR}")
 
# SET(CMAKE_CC_COMPILER /logiciels/public/gcc-4.1.0/bin/gcc)

SET(EXECUTABLE_OUTPUT_PATH	${CMAKE_BINARY_DIR})
SET(   LIBRARY_OUTPUT_PATH	${CMAKE_BINARY_DIR})

INCLUDE_DIRECTORIES(. LU PNE SRS)

FILE(GLOB HEADERS LU/*.h ./PNE/*.h ./SRS/*.h)

MESSAGE("-- LU")
FILE(GLOB LU_FILES  LU/*.c LU/*.h)

MESSAGE("-- PNE")
FILE(GLOB PNE_FILES PNE/*.c PNE/*.h)
LIST(REMOVE_ITEM PNE_FILES PNE/spx_standalone.c)
LIST(REMOVE_ITEM PNE_FILES PNE/pne_standalone.c)

MESSAGE("-- SRS")
FILE(GLOB SRS_FILES SRS/*.c SRS/*.h)
 
ADD_LIBRARY(sirius_solver_static STATIC ${LU_FILES} ${PNE_FILES} ${SRS_FILES})
ADD_LIBRARY(sirius_solver SHARED ${LU_FILES} ${PNE_FILES} ${SRS_FILES})
ADD_EXECUTABLE(TEST_API TEST_API/main.c )

IF(WIN32)
	TARGET_LINK_LIBRARIES(TEST_API sirius_solver_static)
ELSE()
	TARGET_LINK_LIBRARIES(TEST_API sirius_solver_static m)
ENDIF(WIN32)

target_compile_definitions(sirius_solver INTERFACE USE_SIRIUS)
SET_TARGET_PROPERTIES(sirius_solver_static PROPERTIES PUBLIC_HEADER "${HEADERS}")
SET_TARGET_PROPERTIES(sirius_solver PROPERTIES PUBLIC_HEADER "${HEADERS}")
target_include_directories(sirius_solver PUBLIC 
	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/SRS/>
	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/LU/>
	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/PNE/>)

IF (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
	SET(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/install")
ENDIF (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)

MESSAGE("CMAKE_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX}")

INSTALL(TARGETS sirius_solver
	EXPORT sirius_solver
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib
	RUNTIME DESTINATION bin
	INCLUDES DESTINATION include
)

INSTALL(EXPORT sirius_solver
	FILE sirius_solverConfig.cmake
	DESTINATION cmake
)

SET(CPACK_PACKAGE_NAME "sirius_solver")
SET(CPACK_PACKAGE_VERSION_MAJOR "1")
SET(CPACK_PACKAGE_VERSION_MINOR "0")
SET(CPACK_PACKAGE_VERSION_PATCH "0")

SET(CPACK_GENERATOR "ZIP")

INCLUDE(CPack)
