CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
PROJECT(sirius_solver)

if(MSVC)
	add_compile_definitions("_CRT_SECURE_NO_WARNINGS")
	SET(BUILD_SHARED_LIBS OFF)
	SET(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
	SET(CMAKE_VS_INCLUDE_INSTALL_TO_DEFAULT_BUILD 1)
endif(MSVC)

MESSAGE("CMAKE_BINARY_DIR : ${CMAKE_BINARY_DIR}")
MESSAGE("CMAKE_SOURCE_DIR : ${CMAKE_SOURCE_DIR}")
 
# SET(CMAKE_CC_COMPILER /logiciels/public/gcc-4.1.0/bin/gcc)

SET(EXECUTABLE_OUTPUT_PATH	${CMAKE_BINARY_DIR})
SET(   LIBRARY_OUTPUT_PATH	${CMAKE_BINARY_DIR})

INCLUDE_DIRECTORIES(. CALLBACK ALLOCATEUR BRANCH_AND_BOUND POINT_INTERIEUR PRESOLVE SIMPLEXE SIMPLEXE/LU PNE SRS)

FILE(GLOB HEADERS ./CALLBACK/*.h ALLOCATEUR/*.h PRESOLVE/*.h BRANCH_AND_BOUND/*.h POINT_INTERIEUR/*.h SIMPLEXE/*.h SIMPLEXE/LU/*.h ./PNE/*.h ./SRS/*.h )

FILE(GLOB ALLOCATEUR_FILES  ALLOCATEUR/*.c ALLOCATEUR/*.h)
FILE(GLOB PRESOLVE_FILES   PRESOLVE/*.c PRESOLVE/*.h)
FILE(GLOB BRANCH_AND_BOUND_FILES   BRANCH_AND_BOUND/*.c BRANCH_AND_BOUND/*.h)
FILE(GLOB POINT_INTERIEUR_FILES   POINT_INTERIEUR/*.c POINT_INTERIEUR/*.h)
FILE(GLOB SIMPLEXE_FILES   SIMPLEXE/*.c SIMPLEXE/*.h)
FILE(GLOB LU_FILES  SIMPLEXE/LU/*.c SIMPLEXE/LU/*.h)
FILE(GLOB PNE_FILES PNE/*.c PNE/*.h)
FILE(GLOB SRS_FILES SRS/*.c SRS/*.h)
FILE(GLOB CALLBACK_FILES CALLBACK/*.h )
 
GET_FILENAME_COMPONENT(FULL_PATH_TEST_CPP ${CMAKE_CURRENT_SOURCE_DIR}/PNE/pne_standalone.c ABSOLUTE)
MESSAGE("REMOVING FROM SOURCE ${FULL_PATH_TEST_CPP}")
# MESSAGE("-- PNE_FILES : ${PNE_FILES}")
LIST(REMOVE_ITEM PNE_FILES ${FULL_PATH_TEST_CPP})
# MESSAGE("-- PNE_FILES : ${PNE_FILES}")

ADD_LIBRARY(sirius_solver_static STATIC  ${CALLBACK_FILES} ${ALLOCATEUR_FILES} ${PRESOLVE_FILES} ${BRANCH_AND_BOUND_FILES} ${POINT_INTERIEUR_FILES} ${SIMPLEXE_FILES} ${LU_FILES} ${PNE_FILES} ${SRS_FILES} )
ADD_LIBRARY(sirius_solver SHARED ${CALLBACK_FILES} ${ALLOCATEUR_FILES} ${PRESOLVE_FILES} ${BRANCH_AND_BOUND_FILES} ${POINT_INTERIEUR_FILES} ${SIMPLEXE_FILES} ${LU_FILES} ${PNE_FILES} ${SRS_FILES} )
#ADD_EXECUTABLE(PNE_STANDALONE PNE/pne_standalone.c )
#ADD_EXECUTABLE(NEWSPX_STANDALONE SPX_STANDALONE/spx_standalone.c )
#ADD_EXECUTABLE(TEST_API TEST_API/main.c )

FILE(GLOB LIB_PNE_FILES  LIBRAIRIE_PNE/*.c)
FILE(GLOB LIB_PNE_HEADERS  LIBRAIRIE_PNE/*.h)

IF(WIN32)
	# TARGET_LINK_LIBRARIES(TEST_API sirius_solver_static)
ELSE()
	TARGET_LINK_LIBRARIES(sirius_solver m)
	TARGET_LINK_LIBRARIES(sirius_solver_static m)
	# TARGET_LINK_LIBRARIES(TEST_API sirius_solver_static)
ENDIF(WIN32)

target_compile_definitions(sirius_solver INTERFACE USE_SIRIUS)
SET_TARGET_PROPERTIES(sirius_solver_static PROPERTIES PUBLIC_HEADER "${HEADERS}")
SET_TARGET_PROPERTIES(sirius_solver PROPERTIES PUBLIC_HEADER "${HEADERS}")
SET_TARGET_PROPERTIES(sirius_solver_static PROPERTIES C_STANDARD 11)
SET_TARGET_PROPERTIES(sirius_solver PROPERTIES C_STANDARD 11)
target_include_directories(sirius_solver PUBLIC 
	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/CALLBACK/>
	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/SRS/>
	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/LU/>
	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/PNE/>)

IF (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
	SET(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/install")
ENDIF (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)

MESSAGE("CMAKE_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX}")

INSTALL(TARGETS sirius_solver
	EXPORT sirius_solver
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib
	RUNTIME DESTINATION bin
	INCLUDES DESTINATION include
	PUBLIC_HEADER DESTINATION include
)

INSTALL(EXPORT sirius_solver
	FILE sirius_solverConfig.cmake
	DESTINATION cmake
)

SET(CPACK_PACKAGE_NAME "sirius_solver")
SET(CPACK_PACKAGE_VERSION_MAJOR "1")
SET(CPACK_PACKAGE_VERSION_MINOR "0")
SET(CPACK_PACKAGE_VERSION_PATCH "0")

SET(CPACK_GENERATOR "ZIP")

INCLUDE(CPack)
