SetVisualArbo()

FILE(GLOB LIB_PNE_FILES   ${CMAKE_SOURCE_DIR}/LIBRAIRIE_PNE/*.c ${CMAKE_SOURCE_DIR}/LIBRAIRIE_PNE/*.h)
FILE(GLOB LIB_PNE_HEADERS ${CMAKE_SOURCE_DIR}/LIBRAIRIE_PNE/*.h )

MESSAGE("-- LIB_PNE_FILES   : ${LIB_PNE_FILES}")
MESSAGE("-- LIB_PNE_HEADERS : ${LIB_PNE_HEADERS}")
MESSAGE("-- COINDIRINC      : $ENV{COINDIRINC}")
MESSAGE("-- COINDIRLIB      : $ENV{COINDIRLIB}")

INCLUDE_DIRECTORIES($ENV{COINDIRINC} $ENV{XPRESSDIR}/include)

ADD_LIBRARY(PNE_LIBRARY SHARED ${LIB_PNE_FILES})
TARGET_COMPILE_DEFINITIONS(PNE_LIBRARY          PUBLIC SHARED_EXPORTS)

IF(WIN32)
	TARGET_LINK_LIBRARIES(PNE_LIBRARY bib_solveur $ENV{XPRESSDIR}/lib/xprs.lib $ENV{COINDIRLIB}/CoinUtils.lib $ENV{COINDIRLIB}/Clp.lib C:/ProgramData/Anaconda2/Library/lib/zlib.lib C:/ProgramData/Anaconda2/Library/lib/bzip2.lib)
ELSE()
	TARGET_LINK_LIBRARIES(PNE_LIBRARY bib_solveur $ENV{XPRESSDIR}/lib/xprs.lib m)
ENDIF(WIN32) 

FILE(TO_CMAKE_PATH  $ENV{XPRESSDIR}/lib/xprs.lib					XPRS_LIB )
FILE(TO_CMAKE_PATH  $ENV{COINDIRLIB}/CoinUtils.lib					COINUTILS_LIB )
FILE(TO_CMAKE_PATH  $ENV{COINDIRLIB}/Clp.lib						CLP_LIB )
FILE(TO_CMAKE_PATH  C:/ProgramData/Anaconda2/Library/lib/zlib.lib	ZLIB_LIB)
FILE(TO_CMAKE_PATH  C:/ProgramData/Anaconda2/Library/lib/bzip2.lib	BZIP2_LIB)

MESSAGE("-- XPRS_LIB		: ${XPRS_LIB}")
MESSAGE("-- COINUTILS_LIB	: ${COINUTILS_LIB}")
MESSAGE("-- CLP_LIB			: ${CLP_LIB}")
MESSAGE("-- ZLIB_LIB		: ${ZLIB_LIB}")
MESSAGE("-- BZIP2_LIB		: ${BZIP2_LIB}")

INSTALL(TARGETS PNE_LIBRARY RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
INSTALL(TARGETS PNE_LIBRARY ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
INSTALL(FILES ${LIB_PNE_HEADERS}    DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
