SetVisualArbo()

FILE(GLOB LOCAL_HEADERS ${CMAKE_SOURCE_DIR}/ALLOCATEUR/*.h ${CMAKE_SOURCE_DIR}/PRESOLVE/*.h ${CMAKE_SOURCE_DIR}/BRANCH_AND_BOUND/*.h ${CMAKE_SOURCE_DIR}/POINT_INTERIEUR/*.h ${CMAKE_SOURCE_DIR}/SIMPLEXE/*.h ${CMAKE_SOURCE_DIR}/SIMPLEXE/LU/*.h ${CMAKE_SOURCE_DIR}/PNE/*.h )

MESSAGE("-- ALLOCATEUR")
FILE(GLOB ALLOCATEUR_FILES  ${CMAKE_SOURCE_DIR}/ALLOCATEUR/*.c ${CMAKE_SOURCE_DIR}/ALLOCATEUR/*.h)

MESSAGE("-- PRESOLVE")
FILE(GLOB PRESOLVE_FILES   ${CMAKE_SOURCE_DIR}/PRESOLVE/*.c ${CMAKE_SOURCE_DIR}/PRESOLVE/*.h)

MESSAGE("-- BRANCH_AND_BOUND")
FILE(GLOB BRANCH_AND_BOUND_FILES   ${CMAKE_SOURCE_DIR}/BRANCH_AND_BOUND/*.c ${CMAKE_SOURCE_DIR}/BRANCH_AND_BOUND/*.h)

MESSAGE("-- POINT_INTERIEUR")
FILE(GLOB POINT_INTERIEUR_FILES   ${CMAKE_SOURCE_DIR}/POINT_INTERIEUR/*.c ${CMAKE_SOURCE_DIR}/POINT_INTERIEUR/*.h)

MESSAGE("-- SIMPLEXE")
FILE(GLOB SIMPLEXE_FILES   ${CMAKE_SOURCE_DIR}/SIMPLEXE/*.c ${CMAKE_SOURCE_DIR}/SIMPLEXE/*.h)

MESSAGE("-- LU")
FILE(GLOB LU_FILES  ${CMAKE_SOURCE_DIR}/SIMPLEXE/LU/*.c ${CMAKE_SOURCE_DIR}/SIMPLEXE/LU/*.h)

MESSAGE("-- PNE")
FILE(GLOB PNE_FILES ${CMAKE_SOURCE_DIR}/PNE/*.c ${CMAKE_SOURCE_DIR}/PNE/*.h)
 
GET_FILENAME_COMPONENT(FULL_PATH_TEST_CPP ${CMAKE_CURRENT_SOURCE_DIR}/${CMAKE_SOURCE_DIR}/PNE/pne_standalone.c ABSOLUTE)
MESSAGE("REMOVING FROM SOURCE ${FULL_PATH_TEST_CPP}")
LIST(REMOVE_ITEM PNE_FILES ${FULL_PATH_TEST_CPP})

ADD_LIBRARY(bib_solveur SHARED 
	${ALLOCATEUR_FILES} 
	${PRESOLVE_FILES} 
	${BRANCH_AND_BOUND_FILES} 
	${POINT_INTERIEUR_FILES} 
	${SIMPLEXE_FILES} 
	${LU_FILES} 
	${PNE_FILES})
	
ADD_EXECUTABLE(PNE_STANDALONE ${CMAKE_SOURCE_DIR}/PNE/pne_standalone.c )

IF(WIN32)
	TARGET_LINK_LIBRARIES(PNE_STANDALONE bib_solveur)
ELSE()
	TARGET_LINK_LIBRARIES(PNE_STANDALONE bib_solveur m)
ENDIF(WIN32) 

INSTALL(FILES ${LOCAL_HEADERS} DESTINATION ${CMAKE_INSTALL_PREFIX}/include)

INSTALL(TARGETS PNE_STANDALONE  RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
INSTALL(TARGETS bib_solveur     RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
INSTALL(TARGETS bib_solveur     ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
