SetVisualArbo()


FILE(GLOB LIB_RTE_SOLVER_INTERFACE_FILES   ${CMAKE_SOURCE_DIR}/LIB_RTE_SOLVER_INTERFACE/*.cc ${CMAKE_SOURCE_DIR}/LIB_RTE_SOLVER_INTERFACE/*.h)
FILE(GLOB LIB_RTE_SOLVER_INTERFACE_HEADERS ${CMAKE_SOURCE_DIR}/LIB_RTE_SOLVER_INTERFACE/*.h )

MESSAGE("-- LIB_RTE_SOLVER_INTERFACE_FILES   : ${LIB_RTE_SOLVER_INTERFACE_FILES}")
MESSAGE("-- LIB_RTE_SOLVER_INTERFACE_HEADERS : ${LIB_RTE_SOLVER_INTERFACE_HEADERS}")

ADD_LIBRARY(RTE_SOLVER_INTERFACE SHARED ${LIB_RTE_SOLVER_INTERFACE_FILES})


IF(WIN32)
	TARGET_LINK_LIBRARIES(RTE_SOLVER_INTERFACE bib_solveur)
ELSE()
	TARGET_LINK_LIBRARIES(RTE_SOLVER_INTERFACE bib_solveur m)
ENDIF(WIN32) 

TARGET_COMPILE_DEFINITIONS(RTE_SOLVER_INTERFACE PUBLIC SHARED_EXPORTS)

INSTALL(TARGETS RTE_SOLVER_INTERFACE RUNTIME      DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
INSTALL(TARGETS RTE_SOLVER_INTERFACE ARCHIVE      DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
INSTALL(FILES ${LIB_RTE_SOLVER_INTERFACE_HEADERS} DESTINATION ${CMAKE_INSTALL_PREFIX}/include)


MESSAGE("CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS : ${CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS}" )
